--- a/news.html
+++ b/news.html
@@ -92,6 +92,8 @@
                             <div class="discription">
                                 Анна нуждается в вашей помощи уже очень долгое время, <br>
                                 она очень активная и смелая и очень хочет стать олимпиской чемпионкой.
+                                Анна нуждается в вашей помощи уже очень долгое время, <br>
+                                она очень активная и смелая и очень хочет стать олимпиской чемпионкой.
                             </div>
                         </div>
                         <a class="green_block" href = "#">
