--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             </div>
         </div>
         -->
+        <div class="button_up">
+            <img src="img/buttonUp.png"/>
+        </div>
+
         <div class = "menuS">
             <div class = "menu_btn"></div>
             <div class = "podl"></div>
